# trendbot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backtest/: run_backtest.py
config/: config.yaml
scripts/: robustness_check.py  run_live.py  run_paper.py  start_background.bat  walk_forward.py
src/backtest/: engine.py  report.py
src/bot/: runner.py  state.py
src/broker/: alpaca_client.py  mock_client.py
src/data/: fetcher.py  universe.py
src/signals/: generator.py  indicators.py
src/strategy/: risk.py
src/utils/: logger.py
tests/: conftest.py  test_bot_runner.py  test_indicators.py  test_risk.py  test_signals.py
